force-app/main/default/objects/Vehicle__c/Vehicle__c.object-meta.xml
<CustomObject>
    <description>added for US4 deployment</description>
    <label>Vehicle</label>
    <nameField>
        <displayFormat>VEH-{00000}</displayFormat>
        <label>Vehicle ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>