force-app/main/default/objects/Vehicle__c/recordTypes/Truck.recordType-meta.xml
<RecordType>
    <fullName>Truck</fullName>
    <active>true</active>
    <description>Truck</description>
    <label>Truck</label>
</RecordType>